k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-mushroom-identifier
  labels:
    plantin.ml/streamlit-app: mushroom-identifier
  namespace: plantin-stage-app
spec:
  type: NodePort
  ports:
    - port: 8501
      name: http
      targetPort: http
  selector:
    plantin.ml/streamlit-app: mushroom-identifier
