k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-mushroom-identifier
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10M"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - plantin'
  labels:
    plantin.ml/streamlit-app: mushroom-identifier
  namespace: plantin-stage-app
spec:
  rules:
  - host: mushroom-identifier.app.stages.ml.myplantin.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: streamlit-mushroom-identifier
            port:
              name: http
  ingressClassName: nginx
